--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liveview</title>
     <link href="assets/reset.css" rel="stylesheet">
-		<link href="assets/style.css" rel="stylesheet">
-		<script defer src="assets/arena.js"></script>
-		<script defer src="assets/main.js"></script>
+    <link href="assets/style.css" rel="stylesheet">
+    <script defer src="assets/arena.js"></script>
+    <script defer src="assets/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Jost:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:wght@100;300;400&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section>
+    
         <header>
+        <h1> Liveview Moodboard </h1>
+        </header>
         <a href="https://www.are.na/hamza-iqbal-ktujd8e3wzy/props-cte5c2fo2dg" id="channel-url">
-            <h1 class="channel-title"></h1>
+            <h2 class="channel-title"></h2>
         </a>
-    </header>
-        Live View Moodboard
     </section>
+
+
     <section>
-        <h2 class="channel-count"></h2> <!-- How many blocks. -->
+        <!-- How many blocks. -->
         <!-- All the channel “blocks” will be created as children, here. -->
         <!-- You could move the classes to different section elements to separate the types! -->
         <ul class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
