--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <div class="w3-dropdown-hover">
           <button class="button"><h2>Collections+</h2></button>
           <div class="dropdown">
-            <a href="Lighting.html" class="w3-bar-item w3-button">Props</a>
-            <a href="#" class="w3-bar-item w3-button">Lighting</a>
-            <a href="#" class="w3-bar-item w3-button">Camera Angles</a>
-            <a href="#" class="w3-bar-item w3-button">Post Production</a>
-            <a href="#" class="w3-bar-item w3-button">Product Placement</a>
+            <a href="props.html" class="w3-bar-item w3-button">Props</a>
+            <a href="lighting.html" class="w3-bar-item w3-button">Lighting</a>
+            <a href="cameraangles.html" class="w3-bar-item w3-button">Camera Angles</a>
+            <a href="index.html" class="w3-bar-item w3-button">Post Production</a>
+            <a href="productplacement.html" class="w3-bar-item w3-button">Product Placement</a>
 
           </div>
         </div>
