--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
    
 
       <div class="w3-container">
-        <div class="w3-dropdown-hover">
-          <button class="button"><h2>Collections+</h2></button>
+        <div class="button">
+          <button ><h2>Collections+</h2></button>
           <div class="dropdown">
             <a href="props.html" class="w3-bar-item w3-button">Props</a>
             <a href="lighting.html" class="w3-bar-item w3-button">Lighting</a>
