--- a/cameraangles.html
+++ b/cameraangles.html
@@ -65,10 +65,10 @@
             <button ><h2>Collections+</h2></button>
           <div class="dropdown">
             <a href="props.html" class="w3-bar-item w3-button">Props</a>
-            <a href="lighting" class="w3-bar-item w3-button">Lighting</a>
-            <a href="cameraangles" class="w3-bar-item w3-button">Camera Angles</a>
-            <a href="postproduction" class="w3-bar-item w3-button">Post Production</a>
-            <a href="productplacement" class="w3-bar-item w3-button">Product Placement</a>
+            <a href="lighting.html" class="w3-bar-item w3-button">Lighting</a>
+            <a href="cameraangles.html" class="w3-bar-item w3-button">Camera Angles</a>
+            <a href="postproduction.html" class="w3-bar-item w3-button">Post Production</a>
+            <a href="productplacement.html" class="w3-bar-item w3-button">Product Placement</a>
 
           </div>
         </div>
